Fixed align

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -219,7 +219,7 @@ dd{
 form {
     text-align: left;
     width: 40%;
-    margin-top: 60px auto;
+    margin: 60px auto;
     background-color: #fff;
     padding: 40px;
 }
